--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -2,11 +2,11 @@ name: Test
 
 on:
   push:
-    branches: [master]
+    branches: [main]
     tags:
       - "**"
   pull_request:
-    branches: [master]
+    branches: [main]
 
     
 jobs:
