--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,7 +13,16 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
+      - name: Set commit status as pending
+        uses: myrotvorets/set-commit-status-action@v2.0.1
+        with:
+          status: pending
       - name: Test
         run: sleep 30
       - name: Test
         run: echo 'd'
+      - name: Set final commit status
+        uses: myrotvorets/set-commit-status-action@v2.0.1
+        if: always()
+        with:
+          status: ${{ job.status }}
