--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,16 +13,32 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - name: Set commit status as pending
-        uses: myrotvorets/set-commit-status-action@v2.0.1
-        with:
-          status: pending
+      - name: Create status
+        run: |
+          curl --request POST \
+          --url https://api.github.com/repos/${{ github.repository }}/statuses/${{ github.event.workflow_run.head_commit.id }} \
+          --header 'authorization: Bearer ${{ secrets.GITHUB_TOKEN }}' \
+          --header 'content-type: application/json' \
+          --data '{
+            "state": "pending",
+            "context": "${{ github.workflow }}",
+            "target_url": "${{ github.event.workflow_run.html_url }}"
+            }' \
+          --fail
       - name: Test
         run: sleep 30
       - name: Test
         run: echo 'd'
-      - name: Set final commit status
-        uses: myrotvorets/set-commit-status-action@v2.0.1
+      - name: Create status
         if: always()
-        with:
-          status: ${{ job.status }}
+        run: |
+          curl --request POST \
+          --url https://api.github.com/repos/${{ github.repository }}/statuses/${{ github.event.workflow_run.head_commit.id }} \
+          --header 'authorization: Bearer ${{ secrets.GITHUB_TOKEN }}' \
+          --header 'content-type: application/json' \
+          --data '{
+            "state": "${{ github.event.workflow_run.conclusion }}",
+            "context": "${{ github.workflow }}",
+            "target_url": "${{ github.event.workflow_run.html_url }}"
+            }' \
+          --fail
